compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_comparison_wrong_types.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "1 < 'c'"

---
"_"@(FileId(1), 6..7) -> ConstError { kind: WrongOperandType, span: (FileId(1), 13..14) }

error in file FileId(1) at 13..14: wrong type for compile-time expression

