compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_div_by_zero-14.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1 rem 0.0

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..20, state: Error(ConstError { kind: DivByZero, span: 13..16 }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: DivByZero, span: 13..16 }

error at 13..16: division by zero in compile-time expression

