compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_div_by_zero-15.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1.0 rem 0

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(HirId(Idx::<HirNode>(4))), span: Span { file: None, range: 11..20 }, state: Error(ConstError { kind: DivByZero, span: Span { file: None, range: 15..18 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(HirId(Idx::<HirNode>(4))), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: DivByZero, span: Span { file: None, range: 15..18 } }

error at 15..18: division by zero in compile-time expression

